@@ -28,7 +28,7 @@ lazy val buildSettings = Seq(
     "-unchecked",            // warn about unchecked type parameters
     "-feature",              // warn about misused language features
     "-language:higherKinds", // allow higher kinded types without `import scala.language.higherKinds`
-    "-source:future",         // enable future language features
+    "-source:future",        // enable future language features
     "-Wunused:all"           // add required compiler option for RemoveUnused[1]
   ),
   Compile / console / scalacOptions --= Seq("-Ywarn-unused", "-Ywarn-unused-import")
@@ -42,8 +42,9 @@ lazy val commonDependencies = Seq(
   "com.sun.xml.ws"     % "jaxws-ri"           % "4.0.2",
   "javax.xml.soap"     % "javax.xml.soap-api" % "1.4.0",
   "org.json4s"        %% "json4s-native"      % "4.0.7",
-  "org.bouncycastle"   % "bcprov-jdk18on"     % "1.78.1",
-  "org.bouncycastle"   % "bcpkix-jdk18on"     % "1.78.1",
+  "org.bouncycastle"   % "bcprov-jdk18on"     % "1.79",
+  "org.bouncycastle"   % "bcpkix-jdk18on"     % "1.79",
+  "org.bouncycastle"   % "bctls-jdk18on"      % "1.79",
   pekkoActor,
   typesafeConfig,
   joda,
@@ -56,16 +57,34 @@ lazy val commonDependencies = Seq(
   "org.apache.commons" % "commons-csv"        % "1.10.0"
 )
 
-lazy val buil1dSettings = Defaults.coreDefaultSettings ++ Seq(
-  scalacOptions ++= Seq("-unchecked", "-deprecation", "-feature", "-target:jvm-1.7"),
-  libraryDependencies                        := Seq(scalaTest),
-  libraryDependencies += "javax.activation"   % "activation"         % "1.1.1",
-  libraryDependencies += "org.glassfish.jaxb" % "jaxb-runtime"       % "4.0.5",
-  libraryDependencies += "javax.xml.bind"     % "jaxb-api"           % "2.3.1",
-  libraryDependencies += "com.sun.xml.ws"     % "jaxws-ri"           % "4.0.2",
-  libraryDependencies += "javax.xml.soap"     % "javax.xml.soap-api" % "1.4.0",
-  libraryDependencies += "org.json4s"        %% "json4s-native"      % "4.0.7"
+lazy val commonSettings = Seq(
+  javaOptions ++= Seq(
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.util=ALL-UNNAMED",
+    "--add-opens=java.base/java.io=ALL-UNNAMED"
+  ),
+  Test / javaOptions ++= Seq(
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.util=ALL-UNNAMED",
+    "--add-opens=java.base/java.io=ALL-UNNAMED"
+  ),
+  run / javaOptions ++= Seq(
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.util=ALL-UNNAMED",
+    "--add-opens=java.base/java.io=ALL-UNNAMED"
+  )
 )
+
+// lazy val buil1dSettings = Defaults.coreDefaultSettings ++ Seq(
+//   scalacOptions ++= Seq("-unchecked", "-deprecation", "-feature", "-target:jvm-1.7"),
+//   libraryDependencies                        := Seq(scalaTest),
+//   libraryDependencies += "javax.activation"   % "activation"         % "1.1.1",
+//   libraryDependencies += "org.glassfish.jaxb" % "jaxb-runtime"       % "4.0.5",
+//   libraryDependencies += "javax.xml.bind"     % "jaxb-api"           % "2.3.1",
+//   libraryDependencies += "com.sun.xml.ws"     % "jaxws-ri"           % "4.0.2",
+//   libraryDependencies += "javax.xml.soap"     % "javax.xml.soap-api" % "1.4.0",
+//   libraryDependencies += "org.json4s"        %% "json4s-native"      % "4.0.7"
+// )
 
 lazy val manager = (project in file("."))
   .aggregate(common, admin)
@@ -80,6 +99,7 @@ lazy val common = (project in file("common"))
   .settings(
     name        := "common",
     buildSettings,
+    commonSettings,
     promptTheme := ScalapenosTheme,
     libraryDependencies ++= commonDependencies
   )
@@ -89,6 +109,7 @@ lazy val admin = (project in file("admin"))
   .settings(
     name        := "admin",
     buildSettings,
+    commonSettings,
     promptTheme := ScalapenosTheme,
     libraryDependencies += pekkoHttp,
     libraryDependencies += pekkoJson,
